@@ -8,6 +8,9 @@ Version 1.3.0-dev
   * Add the Normalized Difference Vegetation Index service
   * Add importScripts function to JavaScript support (ticket #66)
   * Add multiple inputs values for the same identifier (ticket #72)
+  * Add Python ZOO-API to access ZOO-Kernel internel functions
+  * Add a [headers] section in main.cfg file to add specifics to header returned
+  * Add support for multiple outputs
 
 Version 1.2.0-rc3
 
